name: network-anonymous-i2p
category: Network
version: 0.0.1
description: Haskell API for I2P anonymous networking

license: MIT
license-file: LICENSE
copyright: (c) 2014 Leon Mergen
author: Leon Mergen
maintainer: leon@solatis.com
stability: experimental
synopsis: Haskell API for I2P anonymous networking
build-type: Simple
data-files: LICENSE, README.md
cabal-version: >= 1.10
tested-with: GHC == 7.8, GHC == 7.10

flag debug
  description: Enable debug support
  default:     False

flag eventlog
  description: Enable the eventlog, useful for profiling
  default:     False

library
  hs-source-dirs:      src
  ghc-options:         -Wall -ferror-spans
  default-language:    Haskell2010

  if impl(ghc >= 6.13.0)
    ghc-options: -rtsopts

  if flag(eventlog)
    ghc-options: -eventlog

  if flag(debug)
    cpp-options: -DDEBUG

  exposed-modules:     Network.Anonymous.I2P
                       Network.Anonymous.I2P.Types

  other-modules:       Network.Anonymous.I2P.Internal.Network.Protocol
                       Network.Anonymous.I2P.Internal.Network.Socket
                       Network.Anonymous.I2P.Internal.Debug

  build-depends:       base                     >= 4.3          && < 5
                     , network
                     , binary
                     , bytestring
                     , transformers
                     , lifted-base
                     , mtl
                     , resourcet

test-suite test-suite
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall -ferror-spans -threaded -auto-all -caf-all -fno-warn-type-defaults -fhpc
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:       Spec
                       Main

  if flag(debug)
    cpp-options: -DDEBUG

  build-depends:       base                     >= 4.3          && < 5
                     , hspec
                     , hlint
                     , resourcet
                     , mtl
                     , network

                     , network-anonymous-i2p

source-repository head
  type: git
  location: git://github.com/solatis/haskell-network-anonymous-i2p.git
  branch: master
